[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codewhale-verifiers-harness"
version = "0.1.0"
description = "Prime Intellect Verifiers v0.2 harness for Codewhale"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = ["verifiers==0.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["codewhale_harness"]
